...
                                <connections>
                                    <action selector="datePickerValueChanged:" destination="-1" eventType="valueChanged" id="2VT-PA-mcO"/>
                                </connections>
                            </datePicker>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzB-Lu-RIm" userLabel="refreshDataButton">
                                <rect key="frame" x="30" y="10" width="30" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="RefreshDataButtonId"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="6OC-cP-H5L"/>
                                    <constraint firstAttribute="height" constant="20" id="pVJ-Mm-lFn"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
...
                                    <constraint firstAttribute="width" constant="30" id="BZG-di-A3Q"/>
                                    <constraint firstAttribute="height" constant="30" id="hWR-KW-2QI"/>
                                </constraints>
                                <color key="color" red="0.20392158630000001" green="0.40784314269999999" blue="0.68235301969999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            </activityIndicatorView>
                        </subviews>
                        <accessibility key="accessibilityConfiguration" identifier="ManagerPageToolbarViewId"/>
                        <constraints>
                            <constraint firstItem="5DL-zt-edh" firstAttribute="leading" secondItem="x73-pZ-XZj" secondAttribute="trailing" constant="20" id="7Bg-ms-zVG"/>
                            <constraint firstItem="uzB-Lu-RIm" firstAttribute="leading" secondItem="x88-Hs-52Z" secondAttribute="leading" constant="30" id="8di-I5-uDo"/>
                            <constraint firstItem="x73-pZ-XZj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uzB-Lu-RIm" secondAttribute="trailing" constant="20" id="E09-CP-gKn"/>
                            <constraint firstItem="5DL-zt-edh" firstAttribute="centerY" secondItem="x88-Hs-52Z" secondAttribute="centerY" id="dBi-Vv-d9k"/>
                            <constraint firstItem="uzB-Lu-RIm" firstAttribute="centerY" secondItem="5DL-zt-edh" secondAttribute="centerY" id="gNQ-zi-MoN"/>
...
