...
extension ManagerPageVC {
    
    private func setupUI() {
        setupGoogleMap()
        datePicker.maximumDate = .now
        largeActivityIndicator.isHidden = true
        datePicker.accessibilityIdentifier = "DatePickerId"
    }
    
    private func setupGoogleMap() {
        let camera = GMSCameraPosition.camera(withLatitude: 50.4501, longitude: 30.5234, zoom: 8)
        let options = GMSMapViewOptions()
        options.camera = camera
...
