...
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GhK-PA-kBG">
                            <rect key="frame" x="106" y="194.66666666666663" width="96" height="35"/>
                            <accessibility key="accessibilityConfiguration" identifier="LoginVCSingUpButtonId"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="35" id="I5i-v6-cH5"/>
                            </constraints>
                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="SingUpButton">
                                <color key="titleColor" red="0.074509806930000005" green="0.20392158630000001" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
