...
                                <connections>
                                    <action selector="changePassButtonTapped:" destination="-1" eventType="touchUpInside" id="lIO-P0-kjz"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLp-vh-xFo">
                                <rect key="frame" x="137.66666666666666" y="597.33333333333337" width="118" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="LogOutButtonId"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="c1F-pM-zLU"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Log out button">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
